; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/kernel/extr_perf_event.c_hw_perf_event_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/kernel/extr_perf_event.c_hw_perf_event_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pmu = type { i32 }
%struct.perf_event = type { i32 }

@pmu = common dso_local global %struct.pmu zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.pmu* @hw_perf_event_init(%struct.perf_event* %0) #0 {
  %2 = alloca %struct.pmu*, align 8
  %3 = alloca %struct.perf_event*, align 8
  %4 = alloca i32, align 4
  store %struct.perf_event* %0, %struct.perf_event** %3, align 8
  %5 = load %struct.perf_event*, %struct.perf_event** %3, align 8
  %6 = call i32 @__hw_perf_event_init(%struct.perf_event* %5)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = load i32, i32* %4, align 4
  %11 = call %struct.pmu* @ERR_PTR(i32 %10)
  store %struct.pmu* %11, %struct.pmu** %2, align 8
  br label %13

12:                                               ; preds = %1
  store %struct.pmu* @pmu, %struct.pmu** %2, align 8
  br label %13

13:                                               ; preds = %12, %9
  %14 = load %struct.pmu*, %struct.pmu** %2, align 8
  ret %struct.pmu* %14
}

declare dso_local i32 @__hw_perf_event_init(%struct.perf_event*) #1

declare dso_local %struct.pmu* @ERR_PTR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
